fix: overlaping issue with mobile hamburger menu and contact form

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.slide-pane__overlay {
+    z-index: 20;
+}
